[metadata]
name = onesmartcontrolpy
version = 0.0.1
author = PimDoos
url = https://github.com/PimDoos/onesmartcontrolpy
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPLv3

[options]
package_dir = 
    =src
packages = find:

[options.packages.find]
where=src